# Lab_1-Stalmakov

./: CMakeLists.txt  Compressor_station.cpp  Compressor_station.h  README.md  lab_code_execution.cpp  pipe.cpp  pipe.h
include/: Compressor_station.h  pipe.h
src/: Compressor_station.cpp  lab_code_execution.cpp  pipe.cpp
